--- a/structure/package.json
+++ b/structure/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "connected-react-router": "^6.9.1",
     "create-react-class": "^15.7.0",
+    "fs": "^0.0.1-security",
     "history": "^4.10.1",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
@@ -22,6 +23,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-image-crop": "^9.1.1",
     "react-intl": "^5.20.10",
     "react-paginate": "^8.1.0",
     "react-redux": "^7.2.6",
